--- a/Dahua_sdk_3/Src/form.ui
+++ b/Dahua_sdk_3/Src/form.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>733</width>
-    <height>589</height>
+    <width>991</width>
+    <height>635</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -39,16 +39,16 @@
     <rect>
      <x>30</x>
      <y>60</y>
-     <width>300</width>
-     <height>250</height>
+     <width>541</width>
+     <height>411</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_Open">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>70</y>
+     <x>640</x>
+     <y>60</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -72,8 +72,8 @@
   <widget class="QPushButton" name="pushButton_Close">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>70</y>
+     <x>750</x>
+     <y>60</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -97,8 +97,8 @@
   <widget class="QPushButton" name="pushButton_Start">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>120</y>
+     <x>640</x>
+     <y>110</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -122,8 +122,8 @@
   <widget class="QPushButton" name="pushButton_Stop">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>120</y>
+     <x>750</x>
+     <y>110</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -182,8 +182,8 @@
   <widget class="QSlider" name="horizontalSlider_Rote">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>180</y>
+     <x>640</x>
+     <y>200</y>
      <width>160</width>
      <height>16</height>
     </rect>
@@ -195,8 +195,8 @@
   <widget class="QSlider" name="horizontalSlider_Gain">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>230</y>
+     <x>640</x>
+     <y>290</y>
      <width>160</width>
      <height>16</height>
     </rect>
@@ -208,8 +208,8 @@
   <widget class="QLineEdit" name="lineEdit_Width">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>280</y>
+     <x>660</x>
+     <y>460</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -218,8 +218,8 @@
   <widget class="QLineEdit" name="lineEdit_Height">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>280</y>
+     <x>820</x>
+     <y>460</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -228,8 +228,8 @@
   <widget class="QPushButton" name="pushButton_Resolution">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>330</y>
+     <x>760</x>
+     <y>510</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -253,8 +253,8 @@
   <widget class="QLineEdit" name="lineEdit_Rote">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>180</y>
+     <x>820</x>
+     <y>200</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -263,11 +263,114 @@
   <widget class="QLineEdit" name="lineEdit_Gain">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>230</y>
+     <x>820</x>
+     <y>290</y>
      <width>113</width>
      <height>20</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_Rote">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>160</y>
+     <width>71</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>设置帧率</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_Gain">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>250</y>
+     <width>71</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>设置增益</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_Exposure">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>380</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_Exposure">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>340</y>
+     <width>71</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>设置曝光</string>
+   </property>
+  </widget>
+  <widget class="QSlider" name="horizontalSlider_Exposure">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>380</y>
+     <width>160</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_Onestart">
+   <property name="geometry">
+    <rect>
+     <x>850</x>
+     <y>110</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>75</width>
+     <height>23</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>75</width>
+     <height>23</height>
+    </size>
+   </property>
+   <property name="text">
+    <string>单张采集</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>700</x>
+     <y>430</y>
+     <width>211</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>宽度           *           高度</string>
    </property>
   </widget>
  </widget>
