修改完成，连续裁剪，放大裁剪

--- a/Dahua_sdk_3/Src/form.ui
+++ b/Dahua_sdk_3/Src/form.ui
@@ -420,7 +420,7 @@
     </size>
    </property>
    <property name="text">
-    <string>框选裁剪</string>
+    <string>显示属性</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
